# tryton-analyzer

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: continuous_integration.yml
scripts/: install_hooks.sh
tests/: test_analyzer.py
tests/sample_module/: __init__.py  module.py  module.xml  registered_typo.xml  tryton.cfg  unregistered.xml
tests/sample_module/view/: test_view.xml
tryton_analyzer/: analyzer.py  parsing.py  pool.py  pool_companion.py  tools.py  tryton_lint.py  tryton_ls.py
